<resources>
    <string name="app_name">dPhone</string>
    <string name="app_webpage">dphone.app</string>
    <string name="auth_token">auth_token</string>
    <string name="identifier_file">identifier.json</string>
    <string name="contacts_file">contacts.json</string>
    <string name="call_history_file">callHistory.json</string>
    <string name="contacts_tab">Contacts</string>
    <string name="history_tab">History</string>
    <string name="search_blockstack_contact">Search a Blockstack account</string>
    <string name="waiting_for_offer">Waiting for offer</string>
    <string name="waiting_for_answer">Waiting for answer</string>
    <string name="connected">Connected</string>
    <string name="loading">Loading&#8230;</string>
    <string name="offer_created">Offer created</string>
    <string name="submit">Submit</string>
    <string name="search_a_contact">Search a contact</string>
    <string name="add_contact">Add contact</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="incoming_call">Incoming call</string>
    <string name="call_in_progress">Call in progress</string>
    <string name="establishing_call">Establishing call</string>
    <string name="deny_call">Deny call</string>
    <string name="answer_call">Answer call</string>
    <string name="end_call">End call</string>
    <string name="cancel_call">Cancel call</string>
    <string name="no_contacts">You have no contacts</string>
    <string name="no_calls_history">You have no history</string>
    <string name="no_filtered_contacts">No contact was found</string>
    <string name="new_contact">New Contact</string>
    <string name="invite">Invite</string>
    <string name="safe_call">Secure call</string>
    <string name="delete">Delete</string>
    <string name="contact_added">Contact added.</string>
    <string name="error_on_add_contact">Error on add contact.</string>
    <string name="share_text_content">Let\'s switch to dPhone:\nhttps://dphone.app</string>
    <string name="sign_in_with_blockstack">Sign in with Blockstack</string>
    <string name="call_duration">Last %1$s</string>
    <string name="call_missed">Missed</string>
    <string name="call_not_answered">Not answered</string>
    <string name="total_selected">%1$d selected</string>
    <string name="skip">Skip All</string>
    <string name="step1_text">The most secure calling app</string>
    <string name="step2_title">Secure and protect your communications against:</string>
    <string name="step2_text1">Industrial espionage</string>
    <string name="step2_text2">Criminal eavesdropping</string>
    <string name="step2_text3">Surveillance by hostile governments</string>
    <string name="step3_title">How does it work?</string>
    <string name="step3_subtitle">No Phone Numbers, Blockstack IDs</string>
    <string name="step3_text">By using Blockstack IDs, every call is protected by high-grade, authenticated, end-to-end encryption.</string>
</resources>
