<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    tools:context=".AddContactActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:foregroundGravity="center|left"
            app:icon="@drawable/baseline_arrow_back_24_black"
            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"
            style="@style/IconOnlyButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/newContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"
            android:textSize="25dp"
            android:text="@string/new_contact"
            android:layout_gravity="center|center"
            android:foregroundGravity="center|center"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/filterText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textFilter"
                android:drawableEnd="@drawable/baseline_search_24"
                android:drawablePadding="5dp"
                android:hint="@string/search_blockstack_contact"
                android:background="@drawable/border"
                android:padding="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:singleLine="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:autofillHints="" />

            <TextView
                android:id="@+id/noDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="17dp"
                android:textStyle="italic"
                android:visibility="gone"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/filterText"
                app:layout_constraintStart_toStartOf="parent"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:id="@+id/list" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/inviteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:foregroundGravity="bottom|right"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="36dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_share_24"
            app:fabSize="normal"
            app:backgroundTint="@color/colorPrimary"
            android:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/inviteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="22dp"
            android:text="@string/invite"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@id/inviteButton"
            app:layout_constraintBottom_toBottomOf="@id/inviteButton"
            app:layout_constraintEnd_toStartOf="@id/inviteButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>